[package]
name = "discrete_range_map"
version = "0.5.2"
authors = ["James Forster <james.forsterer@gmail.com>"]
edition = "2021"
description = """
This crate provides DiscreteRangeMap and DiscreteRangeSet, Data
Structures for storing non-overlapping discrete intervals based off
BTreeMap.
"""
documentation = "https://docs.rs/discrete_range_map"
readme = "README.md"
homepage = "https://github.com/ripytide/discrete_range_map"
repository = "https://github.com/ripytide/discrete_range_map"
license = "AGPL-3.0-or-later"
keywords = ["data-structures", "map", "data", "library"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"], default-features = false }
btree_monstrousity = { version = "0.0.4", features = [
	"btree_drain_filter",
	"btree_cursors",
], default-features = false }
either = { version = "1.9.0", default-features = false }
itertools = { version = "0.12.0", default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
default = ["std"]
std = ["either/use_std", "itertools/use_std", "serde/std"]
alloc = ["itertools/use_alloc"]
