[package]
name = "nodit"
version = "0.9.1"
authors = ["James Forster <james.forsterer@gmail.com>"]
edition = "2021"
description = """
This crate provides Discrete Interval Tree Data-Structures, which are based
off BTreeMap.
"""
documentation = "https://docs.rs/nodit"
readme = "README.md"
homepage = "https://github.com/ripytide/nodit"
repository = "https://github.com/ripytide/nodit"
license = "MIT"
keywords = ["data-structures", "map", "data", "library"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0.193", features = [
	"derive",
], default-features = false, optional = true }
btree_monstrousity = { version = "0.0.4", features = [
	"btree_drain_filter",
	"btree_cursors",
], default-features = false }
itertools = { version = "0.12.0", default-features = false }
smallvec = { version = "1.13.1", default-features = false }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.rust]
missing_docs = "deny"
